tests-system/tuples-4/output
t = potato
    ^^^^^^ tuples-4/foo.trlc:6: error: lhs of check f2 >= 0 (foo.rsl:12) must not be null
t = potato@-42
           ^ tuples-4/foo.trlc:14: check warning: potato2
